Fixed the admin database errors, Also fixed the Setup error.

--- a/readme
+++ b/readme
@@ -18,27 +18,12 @@ vm.embedded.sites is a self-hosted e-commerce plugin designed for users who need
 
 # App Features
 ## Shop Frontend
-- SPE Architecture: Single Page Expirience [Shop, Product, and Checkout views transition without reloads]. 
+- SPE Architecture: Single Page Expirience [Shop, Product, and Checkout views transition without reloads. 
 - Responsive: Optimized for mobile shoppers using Bootstrap 5. 
 - Page Designs: 
 The page themes allow you to change your store designs to how you want your store to look like.
 - Simple Export: This tool exports your page into two formats `<iframe>` or `<source code>`. This makes it easy to embed the store to your static web page.
-
-## Admin Control Panel
-<p align="center"> <img src="https://raw.githubusercontent.com/varsitymarket-technologies/vm.embedded.store/refs/heads/master/assets/admin_ui.png" width="100%" alt="Admin UI Preview"> </p>
-
-- Compehensive Management: Dedicated pages for User Roles, Product Catalogs, Order Tracking.
-
-## Creating Your Own Template 
-Read the `TEMPLATE.md` file.
-
-# Tech Stack 
-
-| Section | Technologies |
-| --- | --- | --- |
-| Backend | PHP 7.4+ |
-| Shop UI | Tailwind CSS, JS |
-
+ 
 # Database & CLI Tools
 The system includes built-in services for database health and backups via the PHP CLI.
 - Initialize/Restart Database:
@@ -55,13 +40,3 @@ php /services/sys.database.restore.php [backup_file]
 # example: php /services/sys.database.restore.php /build/engine.backup
 ```
 
-# API Reference 
-The frontend fetches data from `api.php`. 
-
-## Products 
-Endpoint: `Get api.php?state=products`
-- Function: Returns all the products in the Micro Store Application. 
-
-## Category 
-Endpoint: `Get api.php?state=categories`
-- Function: Returns all the products in the Micro Store Application. 
